# Hytale-Toolkit

./: .gitignore  CHANGELOG.md  README.md  build-tools.py  fix-assertions.ps1  fix-assertions.sh  init-mod.md  init-mod.py
.github/workflows/: docker-publish.yml  release-data.yml  release-tools.yml
decompiled/: manifests.json
decompiled/joptsimple/: AbstractOptionSpec.java  AlternativeLongOptionSpec.java  ArgumentAcceptingOptionSpec.java  ArgumentList.java  BuiltinHelpFormatter.java  IllegalOptionSpecificationException.java  MissingRequiredOptionsException.java  MultipleArgumentsForOptionException.java  NoArgumentOptionSpec.java  NonOptionArgumentSpec.java  OptionArgumentConversionException.java  OptionException.java  OptionMissingRequiredArgumentException.java  OptionParser.java  OptionParserState.java  OptionSet.java  OptionSpecBuilder.java  OptionSpecTokenizer.java  OptionalArgumentOptionSpec.java  ParserRules.java  RequiredArgumentOptionSpec.java  (+4 more)
docs/: allclasses-index.html  allpackages-index.html  constant-values.html  deprecated-list.html  element-list  help-doc.html  index.html  member-search-index.js  overview-summary.html  overview-tree.html  package-search-index.js  search.html  serialized-form.html  type-search-index.js
hytale-mod-cli/: README.md  pyproject.toml
hytale-mod-cli/hytale_mod/: __init__.py  cli.py
hytale-rag/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  index-all.py  package-lock.json  package.json  setup.ps1  setup.py  setup_gui_pyqt.py  tsconfig.json
tools/: logger.py
(+18623 files in other folders)
